--- a/Dissertation.Rmd
+++ b/Dissertation.Rmd
@@ -515,7 +515,7 @@ Ran tests using previously implemented loss functions.
 Show what they look like and what they mean.
 Results reproduced. 
 
-## Deriving and implementing a Novel Loss Function
+## Deriving an Improved Novel Loss Function and Eventprop Scheme 
 
 The current best loss function for Eventprop in the literature has a decreasing exponential weighting for the voltage at the output neurons. The mathematical representation of the exponential weighting can be observed in equation (\ref{eqn:exp_sum_simple}). This kind of weighting reduces the arbitrarily exaggerated impact that the spikes near the end of the recording have on the loss, improving gradient descent. However, a side-effect of this function is that it emphasises the spikes which occur instantaneously. These instantaneous spikes occur while the word in question has barely begun to be said, a judgement on the word at that point would simply be a guess which would not correlate with the ground truth, hence these instantaneous spikes are simply noise. As electronic engineers know from signal processing, *noise is something that should be attenuated not amplified*. 
 
@@ -545,7 +545,7 @@ The exponential weighting and bell curve weightings from equations (\ref{eqn:exp
 The inefficiencies of training caused by very early and very late spikes are of a different nature, therefore it would be beneficial to enable the weighting function to be asymmetrical. This would allow scaling early spikes differently to late spikes. To do this I modified the standard Gaussian function, scaling it by $-t/T$, this gave it a distinct shape, rising quickly earlier in the recording, and fading slowly near the end (figure \ref{fig:exp_vs_gaus_plot}). 
 
 \begin{equation}
-$$ V_{gausian\_mod}(t) = a( -t/T)  \exp{\left( \frac{( -t/T)^2} {2c^2}\right)}\ V(t) $$
+$$ V_{gausian\_mod}(t) = a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right)\ V(t) $$
 \label{eqn:gaus_sum_simple}}
 \end{equation}
 
@@ -560,14 +560,12 @@ $$ V_{gausian\_mod}(t) = a( -t/T)  \exp{\left( \frac{( -t/T)^2} {2c^2}\right)}\ 
  Implementing this modified Gaussian function in the log-softmax form give the new loss function, $\mathcal{L}_{sum\_gaus}$ in equation (\ref{eqn:lif3}). 
 
 \begin{equation}
-$$\mathcal{L}_{sum\_gaus} = -\frac{1}{N_{batch}} \sum^{N_{batch}}_{m=1}log(\frac{exp(\int^{T}_{0} e^{-t/T}V^{m}_{l(m)}(t) dt )}{\sum^{N_{out}}_{k=1}exp(\int^{T}_{0}e^{-t/T}V^{m}_{k}(t) dt)})
+$$\mathcal{L}_{sum\_gaus} = -\frac{1}{N_{batch}} \sum^{N_{batch}}_{m=1}log(\frac{exp(\int^{T}_{0} a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right) V^{m}_{l(m)}(t) dt )}{\sum^{N_{out}}_{k=1}exp(\int^{T}_{0} a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right) V^{m}_{k}(t) dt)})
 $$\label{eqn:lsumgaus}
 \end{equation}
 
 
-As discussed before, the gradient for each weight is backpropagates by solving for the adjoint variables - $\lambda_V$ and $\lambda_I$ - backwards in time. These adjoint variables represent how sensitive the loss is to changes in the state variables - $V$ and $I$ - at a given neuron at a given time. The dynamic properties of these adjoint variables are given by a system of ordinary differential equations (ODEs) - equations (\ref{eqn:lambda_ode}) and (\ref{eqn:lambda_gradient_ode}). Solving for $\tilde{\lambda}_{I,j}(t)$ - which is the adjoint variable for the current summed over an entire batch (equation (\ref{eqn:lambda_i_tilde}))  - allows for finding the gradient of the loss function with respect to the weight $w_{ji}$ - which connect neurons $j$ and $i$ - as is described in equation (\ref{eqn:derivative_of_loss}). 
-
-The following equations are for a general loss function 
+As discussed before, the gradient for each weight is backpropagates by solving for the adjoint variables - $\lambda_V$ and $\lambda_I$ - backwards in time. These adjoint variables represent how sensitive the loss is to changes in the state variables - $V$ and $I$ - at a given neuron at a given time. The dynamic properties of these adjoint variables are given by a system of ordinary differential equations (ODEs) - equations (\ref{eqn:lambda_ode}) and (\ref{eqn:lambda_gradient_ode}). Solving for $\tilde{\lambda}_{I,j}(t)$ - which is the adjoint variable for the current summed over an entire batch (equation (\ref{eqn:lambda_i_tilde}))  - allows for finding the gradient of the loss function with respect to the weight $w_{ji}$ - which connect neurons $j$ and $i$ - as is described in equation (\ref{eqn:derivative_of_loss}). These equations are for a general loss function $\mathcal{L}_F = F\left(\int_0^T l_V dt\right)$, where $l_V$ is a function of output neuron voltages. 
 
 
 \begin{equation}
@@ -615,15 +613,125 @@ $$
 \end{equation}
 
 
+To integrate the new, Gaussian based loss function, $\mathcal{L}_{sum\_gaus}$, into the Eventprop scheme we formulate the gradient of the loss as:
+
+$$
+\begin{align*}
+\frac{d\mathcal{L}}{dw_{ji}} &= \frac{1}{N_{\text{batch}}} \sum_{m=1}^{N_{\text{batch}}} \frac{d}{dw_{ji}} \left( -\log \frac{\exp\left(\int_0^T   a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right)   V_{l(m)}^m(t) dt\right)}{\sum_{k=1}^{N_{\text{out}}} \exp\left(\int_0^T a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right) V_k^m(t) dt\right)} \right) \\
+&= \frac{1}{N_{\text{batch}}} \sum_{m=1}^{N_{\text{batch}}} \frac{dF^m}{dw_{ji}},
+\end{align*}
+$$
+
+Where $F^m$ is the loss of a single trial, $m$, within a batch of trials, $N_{batch}$. Written as a function of the integral of the voltage, $F^m$ becomes:
+
+$$
+F^m \left( \int_0^T a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right) V(t) dt \right) = -\log \frac{\exp \left( \int_0^T a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right)  V_{l(m)}^m (t) dt \right)}{\sum_{k=1}^{N_{\text{out}}} \exp \left( \int_0^T a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right) V_k^m (t) dt \right)}
+$$
+
+So that we can use this loss function within the Eventprop adjoint ODE (equations  (\ref{eqn:lambda_ode}) and (\ref{eqn:lambda_gradient_ode})), we need to find the derivative of $F^m$. We first simplify the input to $F^m$ as:
+
+
+$$
+X_k = \int^T_0 a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right)\ V^m_k (t)\ dt
+$$
+
+Where the integrated output neuron voltage score is $X_k$. Therefore, $X_{l(m)}$ would specifically be the score of the correct output neuron, $l(m)$ for trial $m$. Now we can rewrite $F^m$ as:
+
+$$
+F^m = -\log \frac{\exp \left( X_{l(m)} \right)}{\sum_{k=1}^{N_{\text{out}}} \exp \left( X_k \right)}
+$$
+
+Using the property of logarithms $log(a/b) = log(a)-log(b)$, we get:
+
+$$
+F^m = -\log  \left( \exp \left( X_{l(m)} \right) \right) \ + \log \left( exp\sum_{k=1}^{N_{\text{out}}} \exp \left( X_k \right) \right)
+$$
+
+Simplifying:
+
+$$
+F^m =  \log \left( exp\sum_{k=1}^{N_{\text{out}}} \exp \left( X_k \right) \right) - X_{l(m)} 
+$$
+
+Now we differentiate with respect to $X_n$, where $n$ is an output neuron. 
+
+
+$$
+\frac{\partial F^m}{\partial X_n} = \frac{\partial}{\partial X_n} \left( \log \left( \sum_{k=1}^{N_{\text{out}}} \exp(X_k) \right) - X_{l(m)} \right)
+$$
+
+This can be split into two differentials:
+
+$$
+\begin{align*}
+1. \quad & \frac{\partial}{\partial X_n} \left( \log \left( \sum_{k=1}^{N_{\text{out}}} \exp(X_k) \right) \right) \\
+2. \quad & \frac{\partial}{\partial X_n} (-X_{l(m)})
+\end{align*}
+$$
+To differentiate the first part, let $S = \sum_{k=1}^{N_{\text{out}}} \exp(X_k)$. So the first part becomes $\frac{\partial}{\partial X_n} (\log S)$, and using chain rule:
+
+$$
+\frac{\partial(\log S)}{\partial X_n} = \frac{1}{S} \cdot \frac{\partial S}{\partial X_n} = \frac{1}{S} \cdot \frac{\partial}{\partial X_n} \left( \sum_{k=1}^{N_{\text{out}}} \exp(X_k) \right)
+$$
+The partial derivative of the sum with respect to $X_n$ would be non-zero only when $k = n$. So treating the values where $k \neq n$ as constants we simplify $\frac{\partial S}{\partial X_n}$ as:
+
+$$
+\frac{\partial S}{\partial X_n} = \frac{\partial}{\partial X_n} (\exp(X_n)) = \exp(X_n)
+$$
+Therefore the first part is:
+
+$$
+\frac{1}{\sum_{k=1}^{N_{\text{out}}} \exp(X_k)} \cdot \exp(X_n) = \frac{\exp(X_n)}{\sum_{k=1}^{N_{\text{out}}} \exp(X_k)}
+$$
+
+The second part, $\frac{\partial}{\partial X_n} (-X_{l(m)})$, depends on weather $n$ is the same as $l(m)$.
+
+- If $n = l(m)$, then we are differentiating $-X_n$ with respect to $X_n$, which is -1. 
+- - If $n \neq l(m)$, then $X_l{m}$ is treated as a constant with respect to $X_n$, so the derivative is 0. 
+
+This can be written concisely using the Kronecker delta, $\delta_{n,l(m)}$, which is $1$ if $n = l(m)$ and $0$ if $n \neq l(m)$. So, the second part is:
+
+$$
+\frac{\partial}{\partial X_n} (-\mathbf{X}_{l(m)}) = -\delta_{n,l(m)}.
+$$
+Combining these parts we get:
+
+$$
+\frac{\partial F^m}{\partial X_n} = \frac{\exp(X_n)}{\sum_{k=1}^{N_{\text{out}}} \exp(X_k)} - \delta_{n,l(m)} = -\delta_{n,l(m)} + \frac{\exp(X_n)}{\sum_{k=1}^{N_{\text{out}}} \exp(X_k)}
+$$
+
+Substituting back the original integral notation:
+
+$$
+\frac{\partial F^m}{\partial \left(\int_0^T a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right) V_n^m dt\right)} = -\delta_{n,l(m)} + \frac{\exp\left(\int_0^T a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right) V_n^m dt\right)}{\sum_{k=1}^{N_{\text{out}}} \exp\left(\int_0^T a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right) V_k^m dt\right)}
+$$
+
+
+Therefore, using equations \ref{eqn:lambda_ode}), \ref{eqn:lambda_gradient_ode}), and \ref{eqn:derivative_of_loss}), we can formulate the new Eventprop scheme of the Gaussian based loss function: 
+
+
+$$
+\tau_{\text{syn}} \tilde{\lambda}_{I,j}^{m'} = -\tilde{\lambda}_{I,j}^m + \tilde{\lambda}_{V,j}^m
+$$
+
+$$
+\tau_{\text{mem}} \tilde{\lambda}_{V,j}^{m'} = -\tilde{\lambda}_{V,j}^m + \delta_{j,l(m)} - \frac{\exp\left(\int a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right) V_j^m dt\right)}{\sum_{k=1}^{N_{\text{class}}} \exp\left(\int_0^T a - b\frac{t}{T} exp \left( \frac{- (t/T)^2}{2c^2 }  \right) V_k^m dt\right)}
+$$
 
 
 
+$$
+\frac{dF^m}{dw_{ji}} = -\tau_{\text{syn}} \sum_{\{t_{\text{spike}}(i)\}} \tilde{\lambda}_{I,j}^m (t_{\text{spike}})
+$$
 
-Show graphs of output spikes occurring at the very beginning of the recording. 
+This defines how the adjoint variables, $\lambda_V$ and $\lambda_I$, dynamically evolve, and how the gradient of the loss function, $F^m$, with respect to a weight, $w_{ji}$, is calculated. 
 
-Derived the mathematics of the new eventprop scheme. 
+## Implementing the Novel Eventprop Scheme in Software
 
-Then I implemented this function in the code (C++).
+The derived mathematics need to be actualised in code. To run efficiently, I implemented this maths in C++. 
+
+
+![Code to implement the mathematics of the Eventprop scheme for a Gaussian based loss.](images/code_of_evp.png){#fig:code_of_evp fig-align=center}
 
 
 ## Neural Network Model Description
